--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && copy public\\_redirects build\\",
+    "build": "react-scripts build && cp public/_redirects build/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
